--- a/public/css/table.css
+++ b/public/css/table.css
@@ -21,21 +21,23 @@
     padding: 0.8125rem 0.5rem;
     gap: 0.5rem;
 }
+.table-custom > tbody > tr {
 
+}
 .table-custom > thead > tr > th:last-child,
 .table-custom > tbody > tr > td:last-child {
     border-bottom: 0;
+    width: 5%;
+
 }
 
 th.options,
 td.options {
-    width: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 3rem;
-
 }
 
 .options-dropdown {
