--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,6 +1,74 @@
-form-custom{
-    
+.form-custom {
 }
-form-custom__container{
-    
+.form-custom__container {
+    padding: 1rem 2rem;
+    border-radius: 0.25rem;
+    background: #fff;
+    margin: auto auto;
+    width: fit-content;
+}
+.form-custom__label {
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.04rem;
+    font-family: "Poppins", sans-serif;
+}
+.form-custom__input {
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.25) !important;
+    height: 1.5rem;
+    padding: 0.25rem;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 100%;
+    letter-spacing: 0.04rem;
+    font-family: "Poppins", sans-serif;
+}
+
+.form-custom__group {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: flex-start;
+    min-width: 25.625rem;
+    min-height: 7.25rem;
+    padding: 1rem;
+}
+
+.form-custom__section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.form-custom__btn {
+    text-decoration: none !important;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 0.85rem 2rem !important;
+    margin: 1rem auto;
+    color: #fff;
+    font-family: "Poppins", sans-serif;
+    border: 0;
+}
+
+.form-custom__btn-success {
+    background-color: #004990;
+}
+.form-custom__btn-danger {
+    background-color: #db3742;
+}
+.form-custom__title {
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.04rem;
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    margin-bottom: 1rem;
 }
