added search and stop search function to app layout, added middleware for checking search work order and filters and relationship

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -10,12 +10,14 @@
     box-shadow: 2px 0px 4px 0px rgba(0, 0, 0, 0.45);
     padding-top: 20px;
 }
+
 .content {
     min-height: 94.8vh;
     background: url("../svg/FondoHome.svg");
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 .sidebar-layout a,
 .sidebar-layout__link-logout {
     padding: 15px 25px;
@@ -33,6 +35,7 @@
     background-color: #f8f8f8 !important;
     font-weight: 600;
 }
+
 .sidebar-layout__link-logout {
     border: none;
     padding: 0;
@@ -44,9 +47,11 @@
     padding-left: 30px;
     margin-top: 1rem !important;
     margin: auto;
-    text-decoration: none; /* Remove underline */
+    text-decoration: none;
+    /* Remove underline */
     color: red !important;
 }
+
 /* Navbar Styles */
 .navbar-layout {
     display: flex;
@@ -71,7 +76,8 @@
 }
 
 .content {
-    margin-left: 250px; /* Adjusted for sidebar width */
+    margin-left: 250px;
+    /* Adjusted for sidebar width */
     margin-top: 3rem;
 }
 
@@ -81,6 +87,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .sidebar-layout__logo-title {
     font-family: "Poppins", sans-serif;
     font-size: 1rem;
@@ -98,6 +105,18 @@
     padding-right: 30px;
     position: relative;
 }
+
+.order-search_btn {
+    text-decoration: none !important;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 0.35rem 1rem !important;
+    margin: 1rem auto;
+    color: #fff;
+    font-family: "Poppins", sans-serif;
+    border: 0;
+    background-color: #004990;
+}
+
 .order-search::placeholder {
     font-size: 1rem;
     font-style: normal;
@@ -133,6 +152,7 @@ input:focus {
     padding: 0.5rem;
     margin-bottom: 2rem;
 }
+
 .search-order__info-item {
     font-family: "Poppins", sans-serif;
     color: black;
@@ -147,6 +167,7 @@ input:focus {
     text-align: center;
     padding: 0 1rem;
 }
+
 .search-order__info-item:not(.search-order__info-item:last-child) {
     border-right: 1px solid black;
 }
