--- a/public/css/table.css
+++ b/public/css/table.css
@@ -8,12 +8,14 @@
 .table-custom {
     width: 100%;
 }
-.table-custom > thead,
-.table-custom > tbody {
+
+.table-custom>thead,
+.table-custom>tbody {
     width: 100%;
 }
-.table-custom > thead > tr > th,
-.table-custom > tbody > tr > td {
+
+.table-custom>thead>tr>th,
+.table-custom>tbody>tr>td {
     text-align: left;
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
     background: #fff;
@@ -21,11 +23,11 @@
     padding: 0.8125rem 0.5rem;
     gap: 0.5rem;
 }
-.table-custom > tbody > tr {
 
-}
-.table-custom > thead > tr > th:last-child,
-.table-custom > tbody > tr > td:last-child {
+.table-custom>tbody>tr {}
+
+.table-custom>thead>tr>th:last-child,
+.table-custom>tbody>tr>td:last-child {
     border-bottom: 0;
     width: 5%;
 
@@ -45,12 +47,14 @@ td.options {
     display: inline-block;
     cursor: pointer;
 }
+
 .options-dropdown .vertical-dots {
     display: inline-block;
     transform: rotate(90deg);
     font-size: 20px;
     font-weight: bold;
 }
+
 .options-dropdown-content {
     display: none;
     position: absolute;
@@ -58,7 +62,8 @@ td.options {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    right: 0; /* Adjust this value to move the dropdown to the left */
+    right: 0;
+    /* Adjust this value to move the dropdown to the left */
 }
 
 .options-dropdown-content a,
@@ -106,6 +111,16 @@ td.options:hover .options-dropdown-content {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding: 1.25rem 3rem;
     margin: 1rem auto;
+    color: #fff;
+    font-family: "Poppins", sans-serif;
+}
+
+.finalize-draft {
+    text-decoration: none !important;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 1.15rem 3rem;
+    margin: 1rem auto;
+    border: 0;
     color: #fff;
     font-family: "Poppins", sans-serif;
 }
